--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
-              "src/styles.css"
+              
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                "src/styles.css",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              
+              
             ],
             "scripts": []
           },
