--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "core-js": "^2.5.4",
     "firebase": "^5.4.2",
     "firebase-tools": "^4.2.1",
+    "hammerjs": "^2.0.8",
+    "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
