--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "@firebase/auth": "^0.7.5",
+    "angular-firebase": "^1.1.4",
     "angularfire2": "^5.0.0-rc.12",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
