--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.8.4",
     "@angular/router": "^6.1.0",
     "@auth0/angular-jwt": "^2.0.0",
     "@firebase/auth": "^0.7.5",
