--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@auth0/angular-jwt": "^2.0.0",
     "@firebase/auth": "^0.7.5",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "angular-firebase": "^1.1.4",
     "angularfire2": "^5.0.0-rc.12",
     "autoprefixer": "^9.1.5",
@@ -33,8 +34,12 @@
     "firebase-tools": "^4.2.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.5",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
+    "xlsx": "^0.14.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -44,6 +49,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.1.31",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
