--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
   "projects": {
     "agent-sync": {
       "root": "",
+      
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
@@ -20,7 +21,9 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js", 
+         "src/manifest.json"
             ],
             "styles": [
               {
@@ -105,6 +108,7 @@
           }
         }
       }
+      
     },
     "agent-sync-e2e": {
       "root": "e2e/",
@@ -135,4 +139,5 @@
     }
   },
   "defaultProject": "agent-sync"
+  
 }
