--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/pwa": "^0.8.4",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.9",
     "@auth0/angular-jwt": "^2.0.0",
     "@firebase/auth": "^0.7.5",
     "angular-firebase": "^1.1.4",
