--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "dist/agent-sync",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
